[project]
name = "markdown-server"
version = "0.1.0"
description = "FastAPI server for rendering markdown files with folder-based navigation"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "markdown>=3.5.1",
    "pygments>=2.16.1",
]
